ajout du bot sur index

--- a/workshop/views/index.html
+++ b/workshop/views/index.html
@@ -79,7 +79,7 @@
         <p>© 2024 Gardiens du Web. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
     </footer>
     <!-- Ajouter le script Tidio -->
-    <script src="//code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
+    <script src="https://code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
