ajout du bot sur toutes les pages

--- a/workshop/views/forum.html
+++ b/workshop/views/forum.html
@@ -216,5 +216,7 @@
         // Charger les threads au chargement de la page
         fetchThreads();
     </script>
+    <!-- Ajouter le script Tidio -->
+    <script src="https://code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
 </body>
 </html>
