--- a/workshop/views/aide.html
+++ b/workshop/views/aide.html
@@ -55,7 +55,8 @@
         <p>© 2024 Gardiens du Web. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
     </footer>
 
-
     <script src="/js/app.js"></script>
+    <!-- Ajouter le script Tidio -->
+    <script src="https://code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
 </body>
 </html>
