--- a/workshop/views/arnaque.html
+++ b/workshop/views/arnaque.html
@@ -48,5 +48,9 @@
      <footer>
         <p>© 2024 Gardiens du Web. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
     </footer>
+    
+    <script src="/js/app.js"></script>
+    <!-- Ajouter le script Tidio -->
+    <script src="https://code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
 </body>
 </html>
