--- a/workshop/views/article1.html
+++ b/workshop/views/article1.html
@@ -70,5 +70,7 @@
 
 
     <script src="/js/app.js"></script>
+    <!-- Ajouter le script Tidio -->
+    <script src="https://code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
 </body>
 </html>
