--- a/workshop/views/article3.html
+++ b/workshop/views/article3.html
@@ -54,5 +54,7 @@
 
 
     <script src="/js/app.js"></script>
+    <!-- Ajouter le script Tidio -->
+    <script src="https://code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
 </body>
 </html>
