✨ popup incription avec mail

--- a/workshop/views/atelier.html
+++ b/workshop/views/atelier.html
@@ -85,7 +85,8 @@
     <div id="popup-inscription" class="popup">
         <h3>Inscription par mail</h3>
         <input type="email" placeholder="exemple@domaine.com" required></input><br><br>
-        <span id="open-popup-inscrit" class="popup-btn">Inscription</span>
+        <span id="open-popup-inscrit" class="popup-btn">Inscription</span><br><br>
+		<span id="close-popup-inscription" class="popup-btn">Fermer ❌</span>
     </div>
 	<div id="popup" class="popup">
         <h3>Inscription réussie ! 🎉</h3>
